--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
-@import "tailwindcss";
+@import "tailwindcss/theme.css" layer(theme);
+@import "tailwindcss/preflight.css" layer(base);
+@import "tailwindcss/utilities.css" layer(utilities);
 
-@import "tailwindcss/utilities";
+@layer base {
+  * {
+    @apply text-zinc-300 border-zinc-700;
+  }
+}
 
 body {
-  @apply bg-neutral-800 text-zinc-300 border-zinc-600;
+  background-color: var(--color-zinc-900);
 }
